# breakdancer

./: .gitignore  AlnParser.cpp  AlnParser.h  AlnParser.pm  BreakDancerMax.cpp  BreakDancerMax.h  BreakDancerMax.pl  BreakDancerMini.pl  CMakeLists.txt  INSTALL.md  Makefile  PackageInfo.cmake  Poisson.cpp  Poisson.h  README  bam2cfg.pl  breakdancer_max  gmt.yml  samtools.h
cmake/: BuildBoost.cmake  BuildDeps.cmake  BuildSamtools.cmake  PlatformChecks.cmake
cpp/: AlnParser.cpp  BreakDancerMax.cpp  Poisson.cpp  breakdancer_max
debian/: copyright  postinst.in  prerm.in
gmt/: documentation.md  index.md  install.md
gmt-web/: common.yml
gmt-web/content/: breakdancer.md  documentation.md  example_pipeline.md  index.md  install.md  install.textile
integration-test/: CMakeLists.txt  breakdancer_test.py  inv_del_bam_config
integration-test/data/: NA19238_chr21_del_inv.bam  NA19238_chr21_del_inv.bam.bai  NA19240_chr21_del_inv.bam.bai  expected.H_IJ-NA19238-NA19238-extlibs.1.fastq  expected.H_IJ-NA19238-NA19238-extlibs.2.fastq  expected.H_IJ-NA19240-NA19240-extlibs.2.fastq  expected_output  expected_output.af  expected_output.allseqs  expected_output.cn_per_lib  expected_output.cn_per_lib.af
lib/: Poisson.pm
perl/: BreakDancerMax.pl  BreakDancerMax.pl~  CMakeLists.txt  bam2cfg.pl
release-1.0/: README
src/exe/bam2cfg/: CMakeLists.txt  Params.cpp  Params.hpp  bam2cfg.cpp
src/exe/breakdancer-max/: BreakDancerMax.cpp  BreakDancerMax.h  CMakeLists.txt  MergeBamTest.cpp
src/lib/breakdancer/: AlignmentFilter.hpp  AlnParser.cpp  AlnParser.h  BDConfig.cpp  BDConfig.hpp  BDTypedefs.hpp  BamConfig.cpp  BamConfig.hpp  BamIO.hpp  BamMerger.cpp  BamMerger.hpp  BamReader.cpp  BamReader.hpp  BamSummary.cpp  BamSummary.hpp  BasicRegion.hpp  BedWriter.cpp  BedWriter.hpp  BreakDancer.cpp  BreakDancer.hpp  CMakeLists.txt  FastqWriter.cpp  FastqWriter.hpp  FlagCodec.hpp  Graph.hpp  IBamReader.hpp  IlluminaLIFlagCodec.hpp  IlluminaStandardFlagCodec.hpp  LegacyBamReader.cpp  LegacyBamReader.hpp  LegacyConfig.cpp  LegacyConfig.hpp  LibraryAnalyzer.hpp  LibraryConfig.hpp  LibraryFlagDistribution.hpp  LibraryInfo.hpp  Options.cpp  Options.hpp  Read.cpp  Read.hpp  (+16 more)
src/lib/common/: CMakeLists.txt  ConfigMap.hpp  CountsDistribution.hpp  Graph.hpp  Options.cpp  Options.hpp  ReadFlags.cpp  ReadFlags.hpp  Timer.hpp  utility.hpp
src/lib/config/: BamConfig.cpp  BamConfig.hpp  BamConfigEntry.hpp  BamSummary.cpp  BamSummary.hpp  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.hpp  IlluminaPEReadClassifier.cpp  IlluminaPEReadClassifier.hpp  LibraryConfig.hpp  LibraryFlagDistribution.cpp  LibraryFlagDistribution.hpp  LibraryInfo.hpp  ReadStats.cpp  ReadStats.hpp
src/lib/io/: Alignment.cpp  Alignment.hpp  AlignmentFilter.hpp  AlignmentSource.hpp  BamConfig.cpp  BamConfig.hpp  BamConfigEntry.cpp  BamConfigEntry.hpp  BamHeader.cpp  BamHeader.hpp  BamIO.hpp  BamIo.cpp  BamIo.hpp  BamMerger.cpp  BamMerger.hpp  BamReader.hpp  BamReaderBase.hpp  BamSummary.cpp  BamSummary.hpp  BamWriter.cpp  BamWriter.hpp  CMakeLists.txt  ConfigBuilder.cpp  ConfigBuilder.hpp  ConfigLoader.cpp  ConfigLoader.hpp  FastqWriter.cpp  FastqWriter.hpp  IAlignmentClassifier.hpp  IBamReader.hpp  IReadClassifier.hpp  IlluminaPEReadClassifier.cpp  IlluminaPEReadClassifier.hpp  LibraryFlagDistribution.cpp  LibraryFlagDistribution.hpp  LibraryInfo.hpp  RawBamEntry.hpp  Read.cpp  Read.hpp  ReadStats.hpp  (+1 more)
test-data/: NA19240_chr21_del_inv.bam  TestData.hpp.in  expected.H_IJ-NA19238-NA19238-extlibs.1.fastq  expected.H_IJ-NA19240-NA19240-extlibs.1.fastq  expected.bed  expected_output  expected_output.cn_per_lib.af  inv_del_bam_config
test/lib/breakdancer/: CMakeLists.txt  TestBamReader.cpp  TestBreakDancer.cpp  TestConfig.cpp  TestConfigMap.cpp  TestPoisson.cpp  TestRead.cpp  TestReadCountsByLib.cpp  TestRegion.cpp  TestUtility.cpp
test/lib/common/: CMakeLists.txt  TestConfigMap.cpp  TestCountsDistribution.cpp  TestGraph.cpp  TestUtility.cpp
test/lib/config/: CMakeLists.txt  TestBamConfig.cpp  TestBamConfigEntry.cpp  TestConfig.cpp  TestIlluminaPEReadClassifier.cpp  TestLibraryFlagDistribution.cpp
test/lib/io/: CMakeLists.txt  TestAlignment.cpp  TestBam.cpp  TestBamConfig.cpp  TestBamConfigEntry.cpp  TestBamIo.cpp  TestBamMerger.cpp  TestBamReader.cpp  TestIlluminaPEReadClassifier.cpp  TestLibraryFlagDistribution.cpp  TestRead.cpp  TestRegionLimitedBamReader.cpp
